[metadata]
name = PyVISA-sim
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
maintainer = Matthieu C. Dartiailh
maintainer_email = m.dartiailh@gmail.com
license = MIT License
description = Simulated backend for PyVISA implementing TCPIP, GPIB, RS232, and USB resources
keywords =
    Remote
    VISA
    GPIB
    USB
    serial
    RS232
    measurement
    acquisition
    simulator
    mock
url = https://github.com/pyvisa/pyvisa-sim
long_description = file: README.rst, AUTHORS, CHANGES
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = Linux; Windows; Mac

[options]
packages =
    pyvisa_sim
    pyvisa_sim.testsuite
zip_safe = False
install_requires =
    pyvisa>=1.11.0
    PyYAML
    stringparser
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
use_2to3 = False

[options.package_data]
pyvisa_sim = default.yaml

[check-manifest]
ignore =
    .travis.yml
    tox.ini

[tool:pytest]
addopts =
    -vv
    -ra
    --strict
    --tb=short
testpaths = pyvisa-sim/testsuite